@@ -1128,6 +1128,258 @@
   <td>link=チケット検索</td>
   <td></td>
 </tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=管理ツール</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>//dt[3]/a</td>
+  <td></td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>link=この項目(期限)の削除</td>
+  <td></td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>//input[@value='削除']</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>削除します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>//dt[3]/a</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=新規項目の追加</td>
+  <td></td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.name</td>
+  <td>期限</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.description</td>
+  <td>2回目に追加した期限</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>field.ticket_property</td>
+  <td></td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>field.type6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.sort</td>
+  <td>12</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>//input[@value='追加']</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>追加します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>//dt[3]/a</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=新規項目の追加</td>
+  <td></td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.name</td>
+  <td>期限</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.description</td>
+  <td>2回目に追加した期限</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>field.ticket_property</td>
+  <td></td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>field.type6</td>
+  <td></td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field.sort</td>
+  <td>12</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>//input[@value='追加']</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>追加します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=テストサンプル プロジェクトトップへ</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=状態別チケット一覧</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=チケット検索</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=チケット登録</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field1</td>
+  <td>項目削除後に追加した後</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field2</td>
+  <td>テスト</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field6</td>
+  <td>テスト</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>register</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>登録します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=項目削除後に追加した後</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>select</td>
+  <td>field3</td>
+  <td>label=受付済</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>document.reply_form.reply</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>返信します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+<tr>
+  <td>clickAndWait</td>
+  <td>link=件名が長い場合aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab</td>
+  <td></td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field1</td>
+  <td>件名が長い場合</td>
+</tr>
+<tr>
+  <td>type</td>
+  <td>field2</td>
+  <td>テスト投稿者</td>
+</tr>
+<tr>
+  <td>click</td>
+  <td>document.reply_form.reply</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>状態が変更されていませんが、間違いないですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertConfirmation</td>
+  <td>返信します。よろしいですか？</td>
+  <td></td>
+</tr>
+<tr>
+  <td>assertTextPresent</td>
+  <td></td>
+  <td>Copyright smeghead 2007</td>
+</tr>
+
+
 
 
 
