@@ -1,3 +1,12 @@
+2008-03-24  smeghead <smeghead@users.sourceforge.jp>
+
+    * 一番後ろの項目を削除後、項目の追加を行なった場合にエラーが発生する問題を
+    修正した。
+    * テーブルレイアウトの変更。古いdbからの移行を行なうには、下のコマンドを実行し
+    てください。
+    $ cd db
+    $ echo 'alter table element_type add column deleted integer not null default 0;' | sqlite3 starbug1.db
+
 2008-03-21  smeghead <smeghead@users.sourceforge.jp>
 
     * basic認証のユーザ名を投稿者にデフォルト表示するのをやめた。
